name:                quirinius
version:             0.1
synopsis:            A simple type-safe query EDSL
-- description:
license:             BSD3
license-file:        LICENSE
author:              Emil Axelsson
maintainer:          78emil@gmail.com
copyright:           2018 Mpowered Business Solutions
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Quirinius
                       Quirinius.Database
                       Quirinius.DSL
                       Quirinius.Backend
                       Quirinius.Record.Anonymous
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , ghc-prim >=0.5 && < 0.6
                     , mtl <2.3
                     , persistent
                     , persistent-mysql
                     , persistent-postgresql
                     , text <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveGeneric
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       MultiParamTypeClasses
                       OverloadedStrings
                       PolyKinds
                       Rank2Types
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
                       TypeOperators
  ghc-options:         -Wall
